# sigma

./: .env.example  .gitignore  2075acc3-3269-4767-b8bd-5f8ac314e475.json  CONTRIBUTING.md  LICENSE  README.md  athena-query.skill  dpo_sample.json  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt  run_sigma_web.sh  sft_sample.json  temp.json
.claude/: settings.local.json
data/envs/: README.md
data/envs/airline/: agent_guidelines.md  policy.md  scenario_generator_guidelines.md  tools.py  user_guidelines.md
data/envs/retail/: agent_guidelines.md  db.json  policy.md  scenario_generator_guidelines.md  tools.py  user_guidelines.md
scripts/: trim_db.py
sigma/: README.md  __init__.py  __main__.py  api_server.py  cli_simulator.py  cosmosdb_storage.py  env_registry.py  persona_creator.py  run_simulator.py  scenario_generator.py  simulator_core.py  trajectory.py  trajectory_storage.py  types.py
sigma/envs/: __init__.py  base.py  generic_env.py  manager.py  models.py  paths.py  user.py
sigma/envs/retail/: __init__.py  agent_guidelines.md  data.py  env.py  policy_orig.html  rules.py  tools.py  user_guidelines.md
sigma/exports/: __init__.py  base.py  dpo.py  grpo.py  models.py  optimized_policy.py  raw.py  sft.py
sigma/personas/: README.md
sigma/prompts/: agent_action_base.md  agent_response_base.md  user_base.md
sigma/static/assets/: index-6Qig0tfV.js  index-B3ZHKr0H.js  index-B91BpYW7.js  index-BH8mqUBf.css  index-BM2PQz9l.js  index-BPd-G_c-.js  index-Bj3n86eF.css  index-BkKX6-oh.js  index-BtVvUcUt.css  index-C0BuzWTX.js  index-C0YI_AL0.js  index-C4HeNKcj.css  index-CD-XVpN4.js  index-CZJnTxMi.css  index-Cdqn1Q_e.js  index-CmTdo3nl.js  index-CmdqWKrW.js  index-CnFbUqVj.js  index-CyCEnca0.css  index-D2o4Z40U.js  index-D558jNUL.js  index-DALYa21m.js  index-DNmzTuD5.css  index-DnWQACxD.js  index-Dp5iZj55.css  index-DqGXBt_Z.css  index-Dqf7VMpf.css  index-VoSeKtmh.css  index-bwo5LjkP.css  index-gsrH7hKS.css  index-mFOIqm3y.css  index.html  index.js
sigma/static/assets/assets/: index--MHAOqKR.js  index-0zv5RzF2.js  (+136 more)
sigma/static/react-app/: README.md  index.html  package-lock.json  package.json  vite.config.js
temp/: augment_context_recall.py  augment_sft_context_recall.py  augment_sft_log.txt  augment_sft_simple.py  augment_simple_log.txt  augment_v2_log.txt  grpo_training_data_retail_2025-12-25.jsonl  grpo_training_data_retail_augmented.jsonl  raw_training_data_retail_2026-01-04.jsonl
tests/: __init__.py  test_env_registry.py  test_simulator_core.py
(+89 files in other folders)
